<resources>
    <string name="app_name">Delicioso</string>
<<<<<<< HEAD

    <string name="easiest_recipes">Najłatwiejsze przepisy</string>
    <string name="hardest_recipes">Najtrudniejsze przepisy</string>
    <string name="main_page">Strona główna</string>
    <string name="search">Szukaj</string>
    <string name="name">Nazwa</string>
    <string name="recipe">Przepis</string>
    <string name="difficulty">Trudność</string>
    <string name="servings">Ilość porcji</string>
    <string name="ingredients">Składniki</string>
    <string name="preparation">Przygotowanie</string>
=======
>>>>>>> f60d6aab9b6f2cd0bdfc42e0fdf5ffb872b28256
    <string name="najlatwiejsze_przepisy">Najłatwiejsze przepisy</string>
    <string name="najtrudniejsze_przepisy">Najtrudniejsze przepisy</string>
    <string name="strona_glowna">Strona główna</string>
    <string name="szukaj">Szukaj</string>
    <string name="nazwa">Nazwa</string>
    <string name="wyszukiwarka">Wyszukiwarka</string>
    <string name="skladniki">Składniki</string>
    <string name="home_button">home button</string>
    <string name="search_button">search button</string>
    <string-array name="ingredients">
        <item>1 podwójny filet kurczaka</item>
        <item>2 ząbki czosnku</item>
        <item>5 łyżek oliwy extra</item>
        <item>300 g makaronu np. penne</item>
        <item>bazylia</item>
        <item>50 g orzeszków pinii</item>
        <item>50 g tartego sera grana padano</item>
        <item>sól, pieprz</item>
        <item>350 g świeżego łososia</item>
        <item>2 łyżki marynaty teriyaki</item>
        <item>1 i 1/2 litra bulionu drobiowego lub warzywnego</item>
        <item>400 g filetów dorsza</item>
        <item>1 łyżka oliwy</item>
        <item>500 g filetu z kurczaka</item>
    </string-array>
<<<<<<< HEAD
>>>>>>> kamgaj
=======
    <string name="easiest_recipes">Najłatwiejsze przepisy</string>
    <string name="hardest_recipes">Najtrudniejsze przepisy</string>
    <string name="main_page">Strona główna</string>
    <string name="search">Szukaj</string>
    <string name="name">Nazwa</string>
    <string name="recipe">Przepis</string>
    <string name="difficulty">Trudność</string>
    <string name="servings">Ilość porcji</string>
    <string name="ingredients">Składniki</string>
    <string name="preparation">Przygotowanie</string>
>>>>>>> f60d6aab9b6f2cd0bdfc42e0fdf5ffb872b28256
</resources>