<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.chip.Chip
        android:id="@+id/chip5"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarUP" />


    <EditText
        android:id="@+id/SearchTextList"
        android:layout_width="302dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="6dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/szukaj"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/chip5"
        app:layout_constraintEnd_toEndOf="@+id/chip5"
        app:layout_constraintStart_toStartOf="@+id/chip5"
        app:layout_constraintTop_toTopOf="@+id/chip5" />

    <RadioGroup
        android:id="@+id/toggleProfile"
        android:layout_width="342dp"
        android:layout_height="35dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/color_out_line"
        android:checkedButton="@+id/offer"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip5">

        <RadioButton
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/nazwa"
            android:textColor="@drawable/radiobutton_text_colors" />

        <RadioButton
            android:id="@+id/serving"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/servings"
            android:textColor="@drawable/radiobutton_text_colors" />
    </RadioGroup>
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDown"
        android:layout_width="411dp"
        android:layout_height="90dp"
        android:layout_marginStart="1dp"
        android:background="#FFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarUP"
        android:layout_width="411dp"
        android:layout_height="74dp"
        android:background="@color/mainColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="38.33dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarDown"
        app:layout_constraintStart_toStartOf="@+id/toolbarDown"
        app:layout_constraintTop_toTopOf="@+id/toolbarDown"
        app:srcCompat="@drawable/ic_home_40_dp_red"/>

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="38.33dp"
        android:layout_height="40dp"
        android:layout_marginEnd="25dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarDown"
        app:layout_constraintEnd_toStartOf="@+id/toolbarDown"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:layout_constraintTop_toTopOf="@+id/toolbarDown"
        app:srcCompat="@drawable/ic_search_40_dp_red" />

    <ImageButton
        android:id="@+id/logoutButton"
        android:layout_width="38.33dp"
        android:layout_height="40dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="60dp"
        android:background="#FFFFFF"
        android:onClick="logout"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchButton"
        app:layout_constraintTop_toTopOf="@+id/toolbarDown"
        app:srcCompat="@drawable/ic_logout_40_dp_red" />

    <TextView
        android:id="@+id/NickName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wyszukiwarka"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarUP"
        app:layout_constraintEnd_toEndOf="@+id/toolbarUP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbarUP"
        app:layout_constraintVertical_bias="0.47" />

    <ListView
        android:id="@+id/searchListView"
        android:layout_width="330dp"
        android:layout_height="0dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/toolbarDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleProfile" />


</androidx.constraintlayout.widget.ConstraintLayout>