<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDown"
        android:layout_width="411dp"
        android:layout_height="90dp"
        android:layout_marginStart="1dp"
        android:background="#FFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarUP"
        android:layout_width="411dp"
        android:layout_height="74dp"
        android:background="@color/mainColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="38.33dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarDown"
        app:layout_constraintStart_toStartOf="@+id/toolbarDown"
        app:layout_constraintTop_toTopOf="@+id/toolbarDown"
        app:srcCompat="@drawable/ic_home_40_dp_red" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="38.33dp"
        android:layout_height="40dp"
        android:layout_marginEnd="25dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarDown"
        app:layout_constraintEnd_toStartOf="@+id/toolbarDown"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:layout_constraintTop_toTopOf="@+id/toolbarDown"
        app:srcCompat="@drawable/ic_search_40_dp_red" />

<!--    <ImageButton-->
<!--        android:id="@+id/ticketButton"-->
<!--        android:layout_width="38.33dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_marginStart="45dp"-->
<!--        android:background="#FFFFFF"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/toolbarDown"-->
<!--        app:layout_constraintStart_toEndOf="@+id/searchButton"-->
<!--        app:layout_constraintTop_toTopOf="@+id/toolbarDown"-->
<!--        app:srcCompat="@drawable/ticket"/>-->

    <ImageButton
        android:id="@+id/logoutButton"
        android:layout_width="38.33dp"
        android:layout_height="40dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="60dp"
        android:background="#FFFFFF"
        android:onClick="logout"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchButton"
        app:layout_constraintTop_toTopOf="@+id/toolbarDown"
        app:srcCompat="@drawable/ic_logout_40_dp_red" />

    <TextView
        android:id="@+id/mainPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kaushanscript"
        android:text="@string/main_page"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarUP"
        app:layout_constraintEnd_toEndOf="@+id/toolbarUP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbarUP" />

    <com.google.android.material.chip.Chip
        android:id="@+id/searchChip"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarUP" />

    <TextView
        android:id="@+id/SearchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="@+id/searchChip"
        app:layout_constraintEnd_toEndOf="@+id/searchChip"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="@+id/searchChip"
        app:layout_constraintTop_toTopOf="@+id/searchChip"
        app:layout_constraintVertical_bias="0.516" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/toolbarDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchChip">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/easiestRecipes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/kaushanscript"
                android:text="@string/easiest_recipes"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.28" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="0dp"
                android:layout_height="182dp"
                android:background="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/easiestRecipes">

                <LinearLayout
                    android:id="@+id/easiestRecipesLinearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/hardestRecipes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/kaushanscript"
                android:text="@string/hardest_recipes"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView2"
                android:layout_width="wrap_content"
                android:layout_height="182dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hardestRecipes">

                <LinearLayout
                    android:id="@+id/hardestRecipesLinearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"></LinearLayout>
            </HorizontalScrollView>

<!--            <TextView-->
<!--                android:id="@+id/Discounts"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:text=""-->
<!--                android:textColor="#000000"-->
<!--                android:textSize="24sp"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2"-->
<!--                app:layout_constraintVertical_bias="0" />-->

<!--            <HorizontalScrollView-->
<!--                android:id="@+id/horizontalScrollView3"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="182dp"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/Discounts">-->

<!--                <LinearLayout-->
<!--                    android:id="@+id/DiscountsLinearLayout"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:orientation="horizontal"></LinearLayout>-->
<!--            </HorizontalScrollView>-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>